2005-04-15  Lutz Mueller <lutz@users.sourceforge.net>

	Submitted by Hongli Lai <h.lai@chello.nl>:

	* configure.ac: CURRENT needs only to be increased on changes or 
	  removals, not additions.

2005-03-30  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c: Convert some DEBUG messages to CORRUPT_DATA.

2005-03-29  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg: Removed.
	* README
	* Makefile.am
	* configure.in
	* libexif/exif-loader.c
	* libexif/exif-data.c: Remove references to libjpeg.
	* test/test-tree.c: Removed.
	* test/Makefile.am: Remove test-tree

2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_get_value): Fix tag COPYRIGHT.

2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-data.c (exif_data_save_data_content): Use qsort.

2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libjpeg/jpeg-data.c: Fix #1054322.

2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Fix #1051994.

2005-03-16  Lutz Mueller <lutz@users.sourceforge.net>

	* libexif/exif-entry.c: Marked some strings for translation. Fix #803191.

2005-03-13  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-entry.c (exif_entry_fix): Update also e->components

2005-03-13  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-data.c: critical fix of 2005-03-09 change: saving
	  IFD containing data of odd length was causing memory corruption
	  and total lost of entire EXIF data

2005-03-13  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* NEWS: Release 0.6.12

2005-03-12  Hans Ulrich Niedermann <gp@n-dimensional.de>

	* po/de.po: Partial translation update

2005-03-11  Lutz Mueller <lutz@users.sourceforge.net>

	Spotted by Jan Patera <patera@users.sourceforge.net>:

	* test/test-mem.c: Small fix.

2005-03-10  Jan Patera <patera@users.sourceforge.net>

	* libexif/exif-utils.*,exif-entry.c: Full support of EXIF_FORMAT_SSHORT
	  (used by Nikon & Olympus mnote tags)
